# ShoppingAgentBackend

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  GeminiLLM.py  Gemini_Multi-Tool_Shopping_Agent.json  README.md  agent.py  currency_converter.py  docker-compose.yml  get_details.py  main.py  pyproject.toml  render.yaml  requirements.txt
